# D3D12

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json
cmake/: CompileShaders.cmake  FetchExternal.cmake
shaders/helloworld/: SimpleShader.hlsl
shaders/mesh/: SimpleShader.hlsl
shaders/texture/: SimpleShader.hlsl
source/base/: CMakeLists.txt  Camera.cpp  Camera.hpp  D3D12Context.cpp  D3D12Context.hpp  Example.cpp  Example.hpp  File.cpp  File.hpp  FileUtil.cpp  FileUtil.hpp  GameTimer.cpp  GameTimer.hpp  GraphicsMath.hpp  Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp  SimpleMath.h
source/helloworld/: CMakeLists.txt  SimpleShader.hlsl  main.cpp
source/mesh/: CMakeLists.txt  main.cpp
source/texture/: CMakeLists.txt  Texture.cpp  Texture.hpp  example.DDS  main.cpp
